--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 version: "3.7"
 services:
-  nofar-db:
-    image: mongo:4.2.16
+  postgres-db:
+    image: postgres:9.6.23
     ports:
-      - "27022:27017"
+      - "5432:5432"
+    environment:
+      - POSTGRES_PASSWORD=password
